# grande-coisa-essa-linguagem-gcl-compiler

./: AUTHOR  CMakeLists.txt  COPYING  NOTES  README  TODO  USAGE  compile.sh  grammar.h  idea2.cpp  main.cpp  mygrammar.h  table.h  table_tests.cpp  tests.cpp  token.h
1pass-red-dragon/: CMakeLists.txt  README  none.c
experiments/: ambiguous_example.cpp  comentario.cpp  gramar_examples.cpp  inteiros.c  language.cpp  stack_automata.cpp
gcl/: tokentype.h
gcl-tests/: README  completo.gcl  maceteado.gcl  modular_search.gcl  module_doComplexo2.gcl  program.prog  search.gcl  semescopo.gcl  symbols.gcl  teste2.gcl  teste3.gcl
language-tests/: and.txt  div.txt  equal.txt  factorial.txt  fattr.txt  fibonacci.txt  fif.txt  fifnested.txt  list.txt  mub.txt  mul.txt  or.txt  par.txt  sum.txt  while.txt
sandbox/: CMakeLists.txt  ambiguous_example.cpp  automata_table.cpp  comentario.cpp  gcl_example.cpp  gramar_examples.cpp  language.cpp  lisp_grammar.cpp  list_grammar.cpp  mygrammar.h  rachel_example.cpp  rec.c  stack_automata.cpp  tokens.c
src/: CMakeLists.txt
src/common/: CMakeLists.txt  string.h  token.cpp  token.h  tokentype.h
src/lexical/: CMakeLists.txt  analyser.cpp  analyser.h  filereader.cpp  filereader.h  input.h  string.h  token.cpp  token.h  tokentype.cpp  tokentype.h  transitiontable.h
src/semantic/: analyser.h  functiontable.h  symboltable.h
src/syntatic/: analyser.h  analyzer.h  automata.h  grammar.h  mygrammar.h  table.h  (+1 more)
tests/: CMakeLists.txt  file_reader_test1.cpp  ideia-trad.txt  rr.cpp  string_test.cpp  table_tests.cpp  tests.cpp  tree_test.cpp
